--- a/EC_compute.ipynb
+++ b/EC_compute.ipynb
@@ -1184,9 +1184,7 @@
   {
    "cell_type": "markdown",
    "id": "0761d973",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# 绘图和分析"
    ]
@@ -1195,8 +1193,7 @@
    "cell_type": "markdown",
    "id": "c719326f",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "## MSD"
@@ -1313,9 +1310,7 @@
   {
    "cell_type": "markdown",
    "id": "de52d80b",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## 电导率"
    ]
@@ -1324,9 +1319,7 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "da3a3567",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
@@ -1340,8 +1333,7 @@
    "execution_count": 8,
    "id": "59785aa5",
    "metadata": {
-    "code_folding": [],
-    "hidden": true
+    "code_folding": []
    },
    "outputs": [],
    "source": [
@@ -1366,9 +1358,7 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "d9251486",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# 创建原始DataFrame\n",
@@ -1381,9 +1371,7 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "18cd4da8",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1423,21 +1411,16 @@
   {
    "cell_type": "markdown",
    "id": "10cc8641",
-   "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## 体系大小的影响"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "baa0eb17",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -1446,11 +1429,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "e02b4a28",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1478,9 +1459,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "c7f4c8f0",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
