--- a/dflow_test/EC_compute_dflow.ipynb
+++ b/dflow_test/EC_compute_dflow.ipynb
@@ -18,9 +18,9 @@
     "config[\"host\"] = \"https://workflows.deepmodeling.com\"\n",
     "config[\"k8s_api_server\"] = \"https://workflows.deepmodeling.com\"\n",
     "\n",
-    "bohrium.config[\"username\"] = \"2930256664@qq.com\"\n",
-    "bohrium.config[\"password\"] = \"Bohrium@cch7\"\n",
-    "bohrium.config[\"project_id\"] = \"11702\"\n",
+    "bohrium.config[\"username\"] = \"your username\"\n",
+    "bohrium.config[\"password\"] = \"your password\"\n",
+    "bohrium.config[\"project_id\"] = \"your project_id\"\n",
     "s3_config[\"repo_key\"] = \"oss-bohrium\"\n",
     "s3_config[\"storage_client\"] = TiefblueClient()"
    ]
@@ -159,7 +159,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.16 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -173,7 +173,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.9.16"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "397224b3cdb3a23561542feed94c5cf45952f2aadda9fa59ec57fed9311c625f"
+   }
   }
  },
  "nbformat": 4,
