--- a/EC_compute.ipynb
+++ b/EC_compute.ipynb
@@ -242,9 +242,7 @@
   {
    "cell_type": "markdown",
    "id": "0761d973",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# 绘图和分析"
    ]
@@ -253,8 +251,7 @@
    "cell_type": "markdown",
    "id": "c719326f",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "## MSD"
@@ -341,8 +338,7 @@
    "cell_type": "markdown",
    "id": "de52d80b",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "## 电导率"
@@ -440,21 +436,16 @@
   {
    "cell_type": "markdown",
    "id": "10cc8641",
-   "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## 体系大小的影响"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "baa0eb17",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -463,12 +454,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "e02b4a28",
-   "metadata": {
-    "hidden": true
-   },
-   "outputs": [],
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ttest_indResult(statistic=0.7956750145110278, pvalue=0.45870931659657) \n",
+      " Ttest_indResult(statistic=-0.09604729360706078, pvalue=0.9256513491366611) \n",
+      " Ttest_indResult(statistic=-0.9831616216985603, pvalue=0.3910262392043696)\n"
+     ]
+    }
+   ],
    "source": [
     "data = pd.read_csv('results.csv')\n",
     "# 将两个相邻的行相加，并生成新的DataFrame\n",
@@ -485,9 +484,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "c7f4c8f0",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
