--- a/EC_compute.ipynb
+++ b/EC_compute.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "cf8da8d9",
    "metadata": {},
@@ -9,6 +10,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "85b870c3",
    "metadata": {
@@ -19,6 +21,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "7b3a787b",
    "metadata": {
@@ -38,7 +41,8 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "import subprocess"
+    "import subprocess\n",
+    "import numpy as np"
    ]
   },
   {
@@ -74,6 +78,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "fa311ec4",
    "metadata": {
@@ -84,6 +89,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "f7712bdf",
    "metadata": {
@@ -154,6 +160,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e640e59f",
    "metadata": {
@@ -240,6 +247,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "0761d973",
    "metadata": {},
@@ -248,6 +256,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "c719326f",
    "metadata": {
@@ -335,6 +344,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "de52d80b",
    "metadata": {
@@ -434,6 +444,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "10cc8641",
    "metadata": {},
